show a banner ad

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Ad Network</string>
+    <string name="ad_id_banner">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
